Fix spacing and padding

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
@@ -15,25 +16,39 @@ html {
 .content {
   position: absolute;
   max-width: 50em;
-  bottom: 2em;
+  bottom: .1em;
   left: 50%;
   width: 100%;
   transform: translateX(-50%);
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .img-flex {
   width: 100%;
   height: auto;
-}
-
-h1 {
-  font-size: 4rem;
-  font-family: 'Open Sans', sans-serif;
-  color: #fff;
-  background-color: rgba(0, 0, 0, .5);
+  display: block;
 }
 
 h2 {
+  font-size: 4rem;
+  font-family: "Open Sans", sans-serif;
+  color: #fff;
+  margin: 0;
+  line-height: 1.4;
+}
+
+p {
   font-size: 2rem;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+}
+
+body {
+  margin: 0;
+}
+
+strong {
+  background-color: rgba(0, 0, 0, .5);
 }
